--- a/PsD/practica1/Memoria.tex
+++ b/PsD/practica1/Memoria.tex
@@ -37,7 +37,7 @@
   stringstyle=\color{mymauve}
 }
 \tolerance=1000
-\author{David Márquez\and Irene Mollet}
+\author{David Márquez\and Irene Mollet the best}
 \date{\today}
 \title{Pràctica 1\\Pseudorandom Noise Generator}
 \newcounter{previCounter}
